tests/js/invalid/function/mismatched-types-3.buri
Func = (Int) => Int
func: Func = (a, b) => a + b